style: misc enhancements for look chore: notes about issues on iOS safari

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,700');
 @import './theme.scss';
 
-*, *:before, *:after {
+* {
+  box-sizing: inherit;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-kerning: auto;
+}
+
+*:before, *:after {
   box-sizing: inherit;
 }
 
@@ -10,6 +18,7 @@ html {
   width: 100%;
   height: 100%;
   font-family: 'Roboto', sans-serif;
+  -webkit-text-size-adjust: 100%;
 
   body {
     width: inherit;
